# finsovetnik-summation-bot

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  vector.yaml
.github/workflows/: build-n-deploy.yaml
src/: bot.py  constants.py  data_models.py  llm.py  logging_config.py  pages.py  scraper.py  settings.py
