[project]
name = "finsovetnik-summation-bot"
version = "0.1.0"
description = "This is an telegram bot that parses website, summarizes its content with chatgpt and sends to telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "aiosqlite<0.21",
    "beautifulsoup4>=4.13.4",
    "litellm>=1.69.0",
    "ormar[sqlite]>=0.20.2",
    "sqlalchemy[asyncio]>=1.4.54",
]

[tool.ruff]
line-length = 110
