[project]
name = "finsovetnik-summation-bot"
version = "0.1.0"
description = "This is a telegram bot that parses website, summarizes content with chatgpt and sends to telegram"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiogram==3.20.*",
    "aiohttp==3.11.*",
    "beautifulsoup4==4.13.*",
    "litellm==1.69.*",
    "piccolo[sqlite]==1.29.*",
]

[tool.ruff]
line-length = 110
